--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <body>
     <a href="./Homework-2/blog.html">b1</a>
     <a href="./Homework-2/DSCV.html">b2</a>g
-    <a href="./Homework-2/">b3</a>
-    <a href="">b4</a>
-    <a href="">b5</a>
-    <a href="">b6</a>
-
-    <h1>test</h1>
+    <a href="./Homework-2/gioithieu.html">b3</a>
+    <a href="./Homework-2/mucluc.html">b4</a>
+    <a href="./Homework-2/privateweb.html">b5</a>
+    <a href="./Homework-2/tintuc.html">b6</a>
   </body>
 </html>
