--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
 
   <body>
-    <a href="./Homework-2/blog.html">b1</a>
-    <a href="./Homework-2/DSCV.html">b2</a>g
-    <a href="./Homework-2/gioithieu.html">b3</a>
-    <a href="./Homework-2/mucluc.html">b4</a>
-    <a href="./Homework-2/privateweb.html">b5</a>
-    <a href="./Homework-2/tintuc.html">b6</a>
+    <h1>Bài tập buổi 2</h1>
+    <a href="./Homework-2/blog.html">Bài tập 1</a>
+    <a href="./Homework-2/DSCV.html">Bài tập 2</a>
+    <a href="./Homework-2/gioithieu.html">Bài tập 3</a>
+    <a href="./Homework-2/mucluc.html">Bài tập 4</a>
+    <a href="./Homework-2/privateweb.html">Bài tập 5</a>
+    <a href="./Homework-2/tintuc.html">Bài tập 6</a>
   </body>
 </html>
