--- a/Homework-2/mucluc.html
+++ b/Homework-2/mucluc.html
@@ -12,12 +12,12 @@
       <p>Bài 1: Giới thiệu</p>
       <p>Bài 2: các thẻ phổ biến</p>
     </h3>
-    <h4 style="font-size: 1.5em">Phần 2: CSS cơ bản</h4>
-    <h5 style="font-size: 1.17em">Bài 1: Cách dùng CSS</h5>
-    <h6 style="font-size: 1em">
+    <h2>Phần 2: CSS cơ bản</h2>
+    <h3>Bài 1: Cách dùng CSS</h3>
+    <h4>
       <p>Inline</p>
       <p>Internal</p>
       <p>External</p>
-    </h6>
+    </h4>
   </body>
 </html>
