--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <h1>Bài tập buổi 2</h1>
     <ul>
       <li>
-        <a href="./Homework-2/blog.html">Bài tập 1</a>
+        <a href="./Homework-2/blog.html" target="_blank">Bài tập 1</a>
       </li>
       <li>
-        <a href="./Homework-2/DSCV.html">Bài tập 2</a>
+        <a href="./Homework-2/DSCV.html" target="_blank">Bài tập 2</a>
       </li>
       <li>
-        <a href="./Homework-2/gioithieu.html">Bài tập 3</a>
+        <a href="./Homework-2/gioithieu.html" target="_blank">Bài tập 3</a>
       </li>
       <li>
-        <a href="./Homework-2/mucluc.html">Bài tập 4</a>
+        <a href="./Homework-2/mucluc.html" target="_blank">Bài tập 4</a>
       </li>
       <li>
-        <a href="./Homework-2/privateweb.html">Bài tập 5</a>
+        <a href="./Homework-2/privateweb.html" target="_blank">Bài tập 5</a>
       </li>
       <li>
-        <a href="./Homework-2/tintuc.html">Bài tập 6</a>
+        <a href="./Homework-2/tintuc.html" target="_blank">Bài tập 6</a>
       </li>
     </ul>
   </body>
